--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   image_picker:
+  firebase_core:
+  firebase_auth:
+  cloud_firestore:
+  firebase_storage:
+  pinput:
+  provider:
+  http:
+  flutter_spinkit: ^5.2.0
 
 dev_dependencies:
   flutter_test:
