--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,8 @@ dependencies:
   pinput:
   provider:
   http:
-  flutter_spinkit: ^5.2.0
+  flutter_spinkit:
+  flutter_image_compress:
 
 dev_dependencies:
   flutter_test:
