--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_spinkit:
   flutter_image_compress:
   shared_preferences:
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
