--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,13 @@ flutter:
   assets:
     - assets/
 
+  fonts:
+    - family: FiraSans
+      fonts:
+        - asset: fonts/FiraSans-Regular.ttf
+        - asset: fonts/FiraSans-Bold.ttf
+        - asset: fonts/FiraSans-Medium.ttf
+          weight: 700
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
